WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23739
REGRESSION (
r36513
): iframe isn't sized properly upon load
https://bugs.webkit.org/show_bug.cgi?id=23739
Summary
REGRESSION (r36513): iframe isn't sized properly upon load
Alice Liu
Reported
2009-02-04 13:29:10 PST
The iframe that contains the plugin content at
http://www.truthinengineering.com/
initially starts out as a letterbox-sized iframe, obscuring the content. This is a regression from behavior in shipping Safari 3.2.1. The iframe is takes on expected size upon resizing the window. I've narrowed the regression to
r36437
-
r36580
<
rdar://problem/6556371
>
Attachments
Reduction
(180 bytes, text/html)
2009-03-19 21:44 PDT
,
Cameron Zwarich (cpst)
no flags
Details
Consider percent-height descendants relative to a table cell for flexing
(40.12 KB, patch)
2009-03-20 02:17 PDT
,
mitz
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Cameron Zwarich (cpst)
Comment 1
2009-03-19 20:49:19 PDT
This seems to be a JavaScript bug, because there is an exception in the inspector. I'll take it.
Cameron Zwarich (cpst)
Comment 2
2009-03-19 21:44:23 PDT
Created
attachment 28780
[details]
Reduction Turns out the exception either isn't repeatable or was from another page I had open. Either way, this bug has nothing to do with JavaScript. Here's the reduction: <html> <body> <table height="100%"> <tr> <td> <div></div> <iframe src="
http://www.webkit.org/
" height="100%"></iframe> </td> </tr> </table> </body> </html> It works fine if you remove the div element.
Cameron Zwarich (cpst)
Comment 3
2009-03-19 23:56:03 PDT
This regressed in
r36513
:
http://trac.webkit.org/changeset/36513
Mitz, I am CC'ing you on this bug, because you might be the best person to fix it. But maybe Beth or Hyatt will also be able to fix it easily.
mitz
Comment 4
2009-03-20 01:03:48 PDT
I think the conditions for cellChildrenFlex in RenderTrableSection::layoutRows() should be changed to include the case of percent-height descendants of the type
r36513
dealt with.
mitz
Comment 5
2009-03-20 02:17:54 PDT
Created
attachment 28782
[details]
Consider percent-height descendants relative to a table cell for flexing
Dave Hyatt
Comment 6
2009-03-20 16:25:51 PDT
Comment on
attachment 28782
[details]
Consider percent-height descendants relative to a table cell for flexing r=me
mitz
Comment 7
2009-03-20 16:49:00 PDT
Fixed in <
http://trac.webkit.org/projects/webkit/changeset/41876
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug