WebCore:

Reviewed by Dave Hyatt.

        - fix https://bugs.webkit.org/show_bug.cgi?id=23739
          <rdar://problem/6556371> REGRESSION (r36513): iframe isn't sized properly upon load

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::percentHeightDescendants): Added this accessor.
        * rendering/RenderBlock.h:
        * rendering/RenderTableSection.cpp:
        (WebCore::RenderTableSection::layoutRows): Extended the check for
        children that flex to include other descendants with percent height
        which is relative to the cell.

LayoutTests:

        Reviewed by Dave Hyatt.

        - test, updated test and results for https://bugs.webkit.org/show_bug.cgi?id=23739
          <rdar://problem/6556371> REGRESSION (r36513): iframe isn't sized properly upon load

        * fast/replaced/percent-height-in-anonymous-block-in-table.html: Added.
        * fast/replaced/table-percent-height-expected.txt:
        * fast/replaced/table-percent-height.html:
        * platform/mac/fast/replaced/percent-height-in-anonymous-block-in-table-expected.checksum: Added.
        * platform/mac/fast/replaced/percent-height-in-anonymous-block-in-table-expected.png: Added.
        * platform/mac/fast/replaced/percent-height-in-anonymous-block-in-table-expected.txt: Added.



Canonical link: https://commits.webkit.org/33933@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41876 268f45cc-cd09-0410-ab3c-d52691b4dbfc